--- a/app/src/main/res/layout/fragment_tvshow.xml
+++ b/app/src/main/res/layout/fragment_tvshow.xml
@@ -23,6 +23,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar" />
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        tools:listitem="@layout/item_row_film2"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
